// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/List/Byline Borderless 1`] = `


`;

exports[`Storyshots Components/List/Byline Navigation 1`] = `


`;

exports[`Storyshots Components/List/Byline Navigation indicator 1`] = `


`;

exports[`Storyshots Components/List/Byline Selection 1`] = `
<section>
  

  <h4>
    Standard Size
  </h4>
  

  <ul
    class="fd-list fd-list--selection fd-list--byline"
    role="listbox"
  >
    
  
    <li
      class="fd-list__item is-selected"
      role="listitem"
      tabindex="0"
    >
      
      
      <div
        class="fd-form-item fd-list__form-item"
      >
        
          
        <input
          checked=""
          class="fd-checkbox"
          id="Ai4ez6111Z"
          type="checkbox"
        />
        
          
        <label
          class="fd-checkbox__label"
          for="Ai4ez6111Z"
          tabindex="-1"
        />
        
      
      </div>
      
      
      <span
        class="sap-icon--activate fd-list__thumbnail"
      />
      
      
      <div
        class="fd-list__content"
      >
        
        
        <span
          class="fd-list__title"
        >
          Title
        </span>
        
        
        <span
          class="fd-list__byline"
        >
          Byline (description)
        </span>
        
      
      </div>
      
  
    </li>
    
  
    <li
      class="fd-list__item"
      role="listitem"
      tabindex="0"
    >
      
    
      <div
        class="fd-form-item fd-list__form-item"
      >
        
          
        <input
          class="fd-checkbox"
          id="Ai4ez6112X"
          type="checkbox"
        />
        
          
        <label
          class="fd-checkbox__label"
          for="Ai4ez6112X"
          tabindex="-1"
        />
        
      
      </div>
      
    
      <span
        aria-label="Image label"
        class="fd-image--s fd-list__thumbnail"
        style="background-image: url('https://placeimg.com/400/400/nature');"
      />
      
    
      <div
        class="fd-list__content"
      >
        
        
        <div
          class="fd-list__title"
        >
          List Item With Two-Column Byline
        </div>
        
        
        <div
          class="fd-list__byline fd-list__byline--2-col"
        >
          
            
          <div
            class="fd-list__byline-left"
          >
            First text item in Byline (Standard text item)
          </div>
          
            
          <div
            class="fd-list__byline-right"
          >
            Second text item in Byline (Can be semantic (Status) or not)
          </div>
          
        
        </div>
        
    
      </div>
      
  
    </li>
    
  
    <li
      class="fd-list__item"
      role="listitem"
      tabindex="0"
    >
      
      
      <div
        class="fd-form-item fd-list__form-item"
      >
        
          
        <input
          class="fd-checkbox"
          id="Ai4ez6113C"
          type="checkbox"
        />
        
          
        <label
          class="fd-checkbox__label"
          for="Ai4ez6113C"
          tabindex="-1"
        />
        
      
      </div>
      
      
      <div
        class="fd-list__content"
      >
        
        
        <div
          class="fd-list__title"
        >
          Text-Only List Item
        </div>
        
        
        <div
          class="fd-list__byline"
        >
          Byline (description)
        </div>
        
      
      </div>
      
  
    </li>
    

  </ul>
  


  <h4>
    Compact Size
  </h4>
  

  <ul
    class="fd-list fd-list--compact fd-list--selection fd-list--byline"
    role="listbox"
  >
    
  
    <li
      class="fd-list__item"
      role="listitem"
      tabindex="0"
    >
      
      
      <div
        class="fd-form-item fd-list__form-item"
      >
        
          
        <input
          class="fd-checkbox fd-checkbox--compact"
          id="Ai4ez6115V"
          type="checkbox"
        />
        
          
        <label
          class="fd-checkbox__label fd-checkbox__label--compact"
          for="Ai4ez6115V"
          tabindex="-1"
        />
        
      
      </div>
      
      
      <span
        class="sap-icon--activate fd-list__thumbnail"
      />
      
      
      <div
        class="fd-list__content"
      >
        
        
        <span
          class="fd-list__title"
        >
          Title
        </span>
        
        
        <span
          class="fd-list__byline"
        >
          Byline (description)
        </span>
        
      
      </div>
      
  
    </li>
    
  
    <li
      class="fd-list__item"
      role="listitem"
      tabindex="0"
    >
      
    
      <div
        class="fd-form-item fd-list__form-item"
      >
        
          
        <input
          class="fd-checkbox fd-checkbox--compact"
          id="Ai4ez6116B"
          type="checkbox"
        />
        
          
        <label
          class="fd-checkbox__label fd-checkbox__label--compact"
          for="Ai4ez6116B"
          tabindex="-1"
        />
        
      
      </div>
      
    
      <span
        aria-label="Image label"
        class="fd-image--s fd-list__thumbnail"
        style="background-image: url('https://placeimg.com/400/400/nature');"
      />
      
    
      <div
        class="fd-list__content"
      >
        
        
        <div
          class="fd-list__title"
        >
          List Item With Two-Column Byline
        </div>
        
        
        <div
          class="fd-list__byline fd-list__byline--2-col"
        >
          
            
          <div
            class="fd-list__byline-left"
          >
            First text item in Byline (Standard text item)
          </div>
          
            
          <div
            class="fd-list__byline-right"
          >
            Second text item in Byline (Can be semantic (Status) or not)
          </div>
          
        
        </div>
        
    
      </div>
      
  
    </li>
    
  
    <li
      class="fd-list__item"
      role="listitem"
      tabindex="0"
    >
      
      
      <div
        class="fd-form-item fd-list__form-item"
      >
        
          
        <input
          class="fd-checkbox fd-checkbox--compact"
          id="Ai4ez6117N"
          type="checkbox"
        />
        
          
        <label
          class="fd-checkbox__label fd-checkbox__label--compact"
          for="Ai4ez6117N"
          tabindex="-1"
        />
        
      
      </div>
      
      
      <div
        class="fd-list__content"
      >
        
        
        <div
          class="fd-list__title"
        >
          Text-Only List Item
        </div>
        
        
        <div
          class="fd-list__byline"
        >
          Byline (description)
        </div>
        
      
      </div>
      
  
    </li>
    

  </ul>
  

</section>
`;

exports[`Storyshots Components/List/Byline Selection with navigation 1`] = `
<section>
  

  <h4>
    Standard Size
  </h4>
  

  <ul
    class="fd-list fd-list--selection fd-list--byline fd-list--navigation fd-list--navigation-indication"
    role="listbox"
  >
    
  
    <li
      class="fd-list__item"
      role="listitem"
      tabindex="0"
    >
      
    
      <div
        class="fd-form-item fd-list__form-item"
      >
        
        
        <input
          class="fd-checkbox"
          id="Ai4ez6118N"
          type="checkbox"
        />
        
        
        <label
          class="fd-checkbox__label"
          for="Ai4ez6118N"
          tabindex="-1"
        />
        
    
      </div>
      
    
      <span
        class="sap-icon--activate fd-list__thumbnail"
      />
      
    
      <div
        class="fd-list__content"
      >
        
    
        <span
          class="fd-list__title"
        >
          Title
        </span>
        
    
        <span
          class="fd-list__byline"
        >
          Byline (description)
        </span>
        
    
      </div>
      
  
    </li>
    
  
    <li
      class="fd-list__item fd-list__item--link is-selected"
      role="listitem"
      tabindex="-1"
    >
      
    
      <div
        class="fd-form-item fd-list__form-item"
      >
        
        
        <input
          checked=""
          class="fd-checkbox"
          id="Ai4ez6119N"
          type="checkbox"
        />
        
        
        <label
          class="fd-checkbox__label"
          for="Ai4ez6119N"
          tabindex="-1"
        />
        
    
      </div>
      
    
      <a
        class="fd-list__link fd-list__link--navigation-indicator is-navigated"
        href="#"
        tabindex="0"
      >
        
    
        <span
          aria-label="Image label"
          class="fd-image--s fd-list__thumbnail"
          style="background-image: url('https://placeimg.com/400/400/nature');"
        />
        
    
        <div
          class="fd-list__content"
        >
          
        
          <div
            class="fd-list__title"
          >
            List Item With Two-Column Byline
          </div>
          
        
          <div
            class="fd-list__byline fd-list__byline--2-col"
          >
            
            
            <div
              class="fd-list__byline-left"
            >
              First text item in Byline (Standard text item)
            </div>
            
            
            <div
              class="fd-list__byline-right"
            >
              Second text item in Byline (Can be semantic (Status) or not)
            </div>
            
        
          </div>
          
    
        </div>
        
    
      </a>
      
  
    </li>
    
  
    <li
      class="fd-list__item fd-list__item--link"
      role="listitem"
      tabindex="-1"
    >
      
    
      <div
        class="fd-form-item fd-list__form-item"
      >
        
        
        <input
          class="fd-checkbox"
          id="Ai4ez61110N"
          type="checkbox"
        />
        
        
        <label
          class="fd-checkbox__label"
          for="Ai4ez61110N"
          tabindex="-1"
        />
        
    
      </div>
      
    
      <a
        class="fd-list__link fd-list__link--navigation-indicator"
        href="#"
        tabindex="0"
      >
        
      
        <div
          class="fd-list__content"
        >
          
        
          <div
            class="fd-list__title"
          >
            Text-Only List Item
          </div>
          
        
          <div
            class="fd-list__byline"
          >
            Byline (description)
          </div>
          
      
        </div>
        
    
      </a>
      
  
    </li>
    

  </ul>
  


  <h4>
    Compact Size
  </h4>
  

  <ul
    class="fd-list fd-list--compact fd-list--selection fd-list--byline fd-list--navigation fd-list--navigation-indication"
    role="listbox"
  >
    
  
    <li
      class="fd-list__item fd-list__item--link"
      role="listitem"
      tabindex="-1"
    >
      
    
      <div
        class="fd-form-item fd-list__form-item"
      >
        
        
        <input
          class="fd-checkbox fd-checkbox--compact"
          id="Ai4ez6118CON"
          type="checkbox"
        />
        
        
        <label
          class="fd-checkbox__label fd-checkbox__label--compact"
          for="Ai4ez6118CON"
          tabindex="-1"
        />
        
    
      </div>
      
    
      <a
        class="fd-list__link fd-list__link--navigation-indicator"
        href="#"
        tabindex="0"
      >
        
      
        <span
          class="sap-icon--activate fd-list__thumbnail"
        />
        
      
        <div
          class="fd-list__content"
        >
          
        
          <span
            class="fd-list__title"
          >
            Title
          </span>
          
        
          <span
            class="fd-list__byline"
          >
            Byline (description)
          </span>
          
      
        </div>
        
    
      </a>
      
  
    </li>
    
  
    <li
      class="fd-list__item is-selected"
      role="listitem"
      tabindex="0"
    >
      
    
      <div
        class="fd-form-item fd-list__form-item"
      >
        
        
        <input
          checked=""
          class="fd-checkbox fd-checkbox--compact"
          id="Ai4ez6119CON"
          type="checkbox"
        />
        
        
        <label
          class="fd-checkbox__label fd-checkbox__label--compact"
          for="Ai4ez6119CON"
          tabindex="-1"
        />
        
    
      </div>
      
    
      <span
        aria-label="Image label"
        class="fd-image--s fd-list__thumbnail"
        style="background-image: url('https://placeimg.com/400/400/nature');"
      />
      
    
      <div
        class="fd-list__content"
      >
        
        
        <div
          class="fd-list__title"
        >
          List Item With Two-Column Byline
        </div>
        
        
        <div
          class="fd-list__byline fd-list__byline--2-col"
        >
          
            
          <div
            class="fd-list__byline-left"
          >
            First text item in Byline (Standard text item)
          </div>
          
            
          <div
            class="fd-list__byline-right"
          >
            Second text item in Byline (Can be semantic (Status) or not)
          </div>
          
        
        </div>
        
    
      </div>
      
  
    </li>
    
  
    <li
      class="fd-list__item fd-list__item--link"
      role="listitem"
      tabindex="-1"
    >
      
    
      <div
        class="fd-form-item fd-list__form-item"
      >
        
        
        <input
          class="fd-checkbox fd-checkbox--compact"
          id="Ai4ez61110CON"
          type="checkbox"
        />
        
        
        <label
          class="fd-checkbox__label fd-checkbox__label--compact"
          for="Ai4ez61110CON"
          tabindex="-1"
        />
        
    
      </div>
      
    
      <a
        class="fd-list__link fd-list__link--navigation-indicator is-navigated"
        href="#"
        tabindex="0"
      >
        
      
        <div
          class="fd-list__content"
        >
          
        
          <div
            class="fd-list__title"
          >
            Text-Only List Item
          </div>
          
        
          <div
            class="fd-list__byline"
          >
            Byline (description)
          </div>
          
      
        </div>
        
    
      </a>
      
  
    </li>
    

  </ul>
  

</section>
`;

exports[`Storyshots Components/List/Byline Standard 1`] = `
<section>
  

  <h4>
    Standard Size
  </h4>
  

  <ul
    class="fd-list fd-list--byline"
    role="list"
  >
    
  
    <li
      class="fd-list__item"
      role="listitem"
      tabindex="0"
    >
      
      
      <span
        class="sap-icon--activate fd-list__thumbnail"
      />
      
      
      <div
        class="fd-list__content"
      >
        
        
        <div
          class="fd-list__title"
        >
          Title
        </div>
        
        
        <div
          class="fd-list__byline"
        >
          Byline (description)
        </div>
        
      
      </div>
      
  
    </li>
    
  
    <li
      class="fd-list__item"
      role="listitem"
      tabindex="0"
    >
      
      
      <span
        class="sap-icon--employee fd-list__thumbnail"
      />
      
      
      <div
        class="fd-list__content"
      >
        
        
        <div
          class="fd-list__title"
        >
          List Item With No Byline
        </div>
        
      
      </div>
      
  
    </li>
    
  
    <li
      class="fd-list__item"
      role="listitem"
      tabindex="0"
    >
      
    
      <span
        aria-label="Image label"
        class="fd-image--s fd-list__thumbnail"
        style="background-image: url('https://placeimg.com/400/400/nature');"
      />
      
    
      <div
        class="fd-list__content"
      >
        
        
        <div
          class="fd-list__title"
        >
          List Item With Two-Column Byline
        </div>
        
        
        <div
          class="fd-list__byline fd-list__byline--2-col"
        >
          
            
          <div
            class="fd-list__byline-left"
          >
            First text item in Byline (Standard text item)
          </div>
          
            
          <div
            class="fd-list__byline-right"
          >
            Second text item in Byline (Can be semantic (Status) or not)
          </div>
          
        
        </div>
        
    
      </div>
      
  
    </li>
    
  
    <li
      class="fd-list__item"
      role="listitem"
      tabindex="0"
    >
      
      
      <div
        class="fd-list__content"
      >
        
        
        <div
          class="fd-list__title"
        >
          Text-Only List Item
        </div>
        
        
        <div
          class="fd-list__byline"
        >
          Byline (description)
        </div>
        
      
      </div>
      
  
    </li>
    

  </ul>
  


  <h4>
    Compact Size
  </h4>
  

  <ul
    class="fd-list fd-list--compact fd-list--byline"
    role="list"
  >
    
  
    <li
      class="fd-list__item"
      role="listitem"
      tabindex="0"
    >
      
      
      <span
        class="sap-icon--activate fd-list__thumbnail"
      />
      
      
      <div
        class="fd-list__content"
      >
        
        
        <div
          class="fd-list__title"
        >
          Title
        </div>
        
        
        <div
          class="fd-list__byline"
        >
          Byline (description)
        </div>
        
      
      </div>
      
  
    </li>
    
  
    <li
      class="fd-list__item"
      role="listitem"
      tabindex="0"
    >
      
      
      <span
        class="sap-icon--employee fd-list__thumbnail"
      />
      
      
      <div
        class="fd-list__content"
      >
        
        
        <div
          class="fd-list__title"
        >
          List Item With No Byline
        </div>
        
      
      </div>
      
  
    </li>
    
  
    <li
      class="fd-list__item"
      role="listitem"
      tabindex="0"
    >
      
    
      <span
        aria-label="Image label"
        class="fd-image--s fd-list__thumbnail"
        style="background-image: url('https://placeimg.com/400/400/nature');"
      />
      
    
      <div
        class="fd-list__content"
      >
        
        
        <div
          class="fd-list__title"
        >
          List Item With Two-Column Byline
        </div>
        
        
        <div
          class="fd-list__byline fd-list__byline--2-col"
        >
          
            
          <div
            class="fd-list__byline-left"
          >
            First text item in Byline (Standard text item)
          </div>
          
            
          <div
            class="fd-list__byline-right"
          >
            Second text item in Byline (Can be semantic (Status) or not)
          </div>
          
        
        </div>
        
    
      </div>
      
  
    </li>
    
  
    <li
      class="fd-list__item"
      role="listitem"
      tabindex="0"
    >
      
      
      <div
        class="fd-list__content"
      >
        
        
        <div
          class="fd-list__title"
        >
          Text-Only List Item
        </div>
        
        
        <div
          class="fd-list__byline"
        >
          Byline (description)
        </div>
        
      
      </div>
      
  
    </li>
    

  </ul>
  

</section>
`;
